--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 
 <head>
 <meta charset="utf-8">
-<title>服务端工程师 - 杭建</title>
 <style type="text/css">
 body {
   font-family: Helvetica, arial, sans-serif;
@@ -332,7 +331,7 @@ sup {
 <h1 id="toc_2">工作经历</h1>
 
 <ul>
-<li><p>随身云信息技术有限公司 （ 2014年11月 ~ 至今 ）</p>
+<li><p>随身云(北京)信息技术有限公司 （ 2014年11月 ~ 至今 ）</p>
 
 <p><strong>服务端技术负责人</strong>：负责公司的服务端技术管理工作，包括架构设计、难点解决、代码review、技术培训等，重构了服务端技术框架，搭建了公司的git、maven、jekens、sonar等基础开发设施，此外主持了公司的大数据平台的开发工作。</p></li>
 <li><p>网易杭州研究院 （ 2013年4月 ~ 2014年11月 ）</p>
@@ -342,7 +341,7 @@ sup {
 
 <h1 id="toc_3">项目经验</h1>
 
-<h2 id="toc_4">随身云信息技术有限公司</h2>
+<h2 id="toc_4">随身云(北京)信息技术有限公司</h2>
 
 <h3 id="toc_5">基础平台</h3>
 
@@ -358,7 +357,7 @@ sup {
 
 <p>随身云内容投放系统，包括自有广告、第三方广告等的投放。对于存储、高并发有着较高的要求。</p>
 
-<h3 id="toc_7">ssy_dmp</h3>
+<h3 id="toc_7">SSY-DMP</h3>
 
 <p>随身云Data mining platform，包括统计和数据挖掘等功能。</p>
 
@@ -393,7 +392,7 @@ sup {
 
 <p>项目主要开发工程师，完成系统用户管理、实时消息、高级功能、群发消息、通用发码、应用平台oauth认证等主要功能模块的开发以及多个第三方公众帐号的开发工作，并参与整体架构设计、部署等。</p>
 
-<h3 id="toc_14">交换机监控系统</h3>
+<h3 id="toc_14">运维监控平台-交换机监控系统</h3>
 
 <p>网易杭研的运维平台主要功能之一，采集网易杭州机房内部几百台交换机的数据，绘制成图表，供服务器维护人员使用。现已上线运行，提供服务。</p>
 
@@ -433,6 +432,7 @@ sup {
 
 <ul>
 <li><a href="https://github.com/superhj1987/java-develop-practice">java-develop-practice</a>: Java开发相关技术的总结</li>
+<li><a href="https://github.com/superhj1987/spring-remoting-thrift">spring-remoting-thrift</a>:Spring remoting thrift support</li>
 <li><a href="https://github.com/superhj1987/spring-mvc-model-attribute-alias">spring-mvc-model-attribute-alias</a> : 针对spring mvc的model attribute不支持别名的解决方案。</li>
 <li><a href="https://github.com/superhj1987/nginx_cookbook">nginx_cookbook</a>: 学习nginx源代码的学习笔记以及一些实践代码</li>
 <li><a href="https://github.com/superhj1987/netty-study">netty-study</a>:netty源代码学习笔记以及实践代码</li>
@@ -462,9 +462,11 @@ sup {
 <li>开发语言：Java/C/Node/PHP/Python/Shell</li>
 <li>开发框架：Spring/Spring mvc/MyBatis/Struts/Netty</li>
 <li>前端框架：Jquery/ExtJs/BootStrap</li>
-<li>数据库相关：MySQL</li>
-<li>版本管理、文档和自动化部署工具：Svn/Git</li>
+<li>数据库相关：MySQL/Redis/Oracle</li>
+<li>版本管理、文档和自动化部署工具：Svn/Git/Jira/Jenkins</li>
 <li>单元测试：Junit</li>
+<li>分布式技术：Storm/Hbase</li>
+<li>消息队列：Kafka/RabbitMQ</li>
 </ul>
 
 
