--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
 <meta charset="utf-8">
+<title>resume-hangjian</title>
 <style type="text/css">
 body {
   font-family: Helvetica, arial, sans-serif;
@@ -418,7 +419,7 @@ sup {
 
 <p>项目开发组长，负责搭建系统整体架构、技术选型、核心模块的编写以及系统的部署、维护等。并具体实现了学习平台和教学管理平台的几个模块功能。</p>
 
-<h2 id="toc_19">综合网络管理系统XNMS</h2>
+<h3 id="toc_19">综合网络管理系统XNMS</h3>
 
 <p>项目来自于：装备科技网络安全预警和控制系统研究与开发，实现综合网络管理系统。包括网络管理五大功能模型，涵盖传统计算机网络、物联网、移动网络等。使用了Java、C/C++语言以及snmp++、agent++、agentX++、GTK+等技术。</p>
 
